<!-- AUDIT: updated 2026-07-08 -->
%%{init: {'theme': 'base'}}%%

erDiagram
    %% ═══════════════════════════════════════════════
    %%  PostgreSQL — Реляционная модель (users, sessions, messages, departments, file_metadata)
    %% ═══════════════════════════════════════════════

    users {
        uuid id PK "UUID v4, первичный ключ"
        varchar username UK "Уникальный логин"
        varchar password_hash "bcrypt hash"
        varchar full_name "ФИО пользователя"
        varchar email UK "Email"
        enum role "admin | analyst | viewer | auditor"
        varchar department "Отдел / подразделение"
        int security_level "0-3: уровень допуска"
        boolean is_active "Активен / заблокирован"
        timestamp created_at "Дата создания"
        timestamp updated_at "Дата обновления"
    }

    chat_sessions {
        uuid id PK "UUID v4"
        uuid user_id FK "Ссылка на users.id"
        jsonb messages "Массив сообщений [{role, content, ts}]"
        jsonb metadata "Контекст: модель, параметры, rbac_filters"
        varchar title "Автозаголовок сессии"
        int message_count "Количество сообщений"
        timestamp created_at "Дата создания"
        timestamp last_activity "Последняя активность"
        timestamp expires_at "TTL сессии"
    }

    chat_messages {
        uuid id PK "UUID v4"
        uuid session_id FK "Ссылка на chat_sessions.id"
        varchar role "user | assistant | system"
        text content "Текст сообщения"
        timestamp created_at "Время создания"
    }

    departments {
        int id PK "Auto-increment"
        varchar name "Название отдела"
        varchar code UK "Код отдела"
        text description "Описание"
        timestamp created_at "Дата создания"
    }

    file_metadata {
        uuid id PK "UUID v4"
        varchar filename "Имя файла"
        varchar original_filename "Оригинальное имя"
        varchar content_type "MIME-тип"
        int file_size "Размер в байтах"
        varchar file_hash "SHA-256 хеш (дедупликация)"
        varchar s3_key "Ключ в MinIO S3"
        varchar status "processed | processing | error"
        uuid uploaded_by FK "Ссылка на users.id"
        timestamp created_at "Дата создания"
    }

    users ||--o{ chat_sessions : "создаёт"
    users ||--o{ file_metadata : "загружает"
    chat_sessions ||--o{ chat_messages : "содержит"

    %% ═══════════════════════════════════════════════
    %%  Admin Settings — динамическая конфигурация
    %% ═══════════════════════════════════════════════

    admin_settings {
        int id PK "Auto-increment"
        varchar category "Категория: prompts | llm_temperature | guardrails | ..."
        varchar key "Ключ настройки"
        text value "Значение"
        varchar value_type "string | text | boolean | integer | float | json_array | json_object"
        text description "Описание настройки"
        int updated_by FK "Ссылка на users.id"
        timestamp updated_at "Дата обновления"
    }

    admin_settings_audit {
        int id PK "Auto-increment"
        int version_id FK "Ссылка на admin_settings_version.id"
        varchar category "Категория"
        varchar key "Ключ"
        text old_value "Старое значение"
        text new_value "Новое значение"
        int changed_by FK "Ссылка на users.id"
        text notes "Примечание"
        timestamp changed_at "Время изменения"
    }

    admin_settings_version {
        int id PK "Auto-increment"
        boolean is_active "Активная версия"
        text notes "Описание версии"
        int created_by FK "Ссылка на users.id"
        timestamp created_at "Дата создания"
    }

    admin_settings ||--o{ admin_settings_audit : "audited in"
    admin_settings_version ||--o{ admin_settings_audit : "groups changes"

    %% ═══════════════════════════════════════════════
    %%  Neo4j — Граф знаний (показан как ER для наглядности)
    %% ═══════════════════════════════════════════════

    neo4j_Document {
        string uid PK "Уникальный ID документа"
        string title "Название документа"
        string source "Источник: RusLawOD | RFSD | Internal"
        string doc_type "Тип: закон | приказ | договор | memo"
        int security_level "0-3: гриф секретности"
        string department "Отдел-владелец"
        string_array access_roles "Роли с доступом"
        date published_date "Дата публикации"
        date indexed_at "Дата индексации"
        string content_hash "SHA-256 оригинала"
    }

    neo4j_Entity {
        string uid PK "Уникальный ID сущности"
        string name "Название (организация, персона, закон)"
        string entity_type "Тип: Organization | Person | Law | Concept"
        string canonical_name "Каноническое имя (для дедупликации)"
        jsonb properties "Дополнительные свойства"
        int security_level "Уровень секретности"
    }

    neo4j_Chunk {
        string uid PK "ID чанка"
        string document_uid FK "Ссылка на Document"
        int chunk_index "Порядковый номер в документе"
        string text "Текст чанка"
        int token_count "Количество токенов"
        string embedding_id "ID вектора в Qdrant"
    }

    neo4j_Document ||--o{ neo4j_Chunk : "CONTAINS"
    neo4j_Document ||--o{ neo4j_Entity : "MENTIONS"
    neo4j_Entity ||--o{ neo4j_Entity : "RELATED_TO"

    %% ═══════════════════════════════════════════════
    %%  Qdrant — Единая векторная коллекция
    %% ═══════════════════════════════════════════════

    qdrant_graphrag_documents {
        string point_id PK "UUID точки"
        float_array vector "bge-m3 embedding (1024 dims)"
        string document_uid "ID документа в Neo4j"
        string chunk_uid "ID чанка в Neo4j"
        string entity_uid "ID сущности в Neo4j (если применимо)"
        string text_preview "Первые 200 символов чанка"
        int security_level "RBAC: уровень секретности"
        string department "RBAC: отдел"
        string_array access_roles "RBAC: роли с доступом"
        string source "Источник набора данных"
        string doc_type "Тип документа"
        date indexed_at "Дата индексации"
    }

    neo4j_Chunk ||--|| qdrant_graphrag_documents : "векторизован в"
    neo4j_Entity ||--o| qdrant_graphrag_documents : "векторизован в"
